--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇦 加拿大-1.09MB/s(Youtube:不良林), server: 134.195.196.128, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-839.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-822.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-987.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-470.2KB/s(Youtube:不良林), server: 5.183.176.91, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-631.7KB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-222.8KB/s(Youtube:不良林), server: 5.183.176.83, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-2.37MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.07MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.02MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-591.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-865.9KB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.81MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活2天)香港-3.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-839.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-822.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-987.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-470.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-631.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-222.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-871.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-591.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-493.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
