--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.19MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-905.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-677.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-1.48MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-850.0KB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 63467, type: trojan, password: 3fbb3fd9-e1a2-4c91-8380-dc2998d1fa8c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇯🇵 日本-587.5KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇦 加拿大-439.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-884.0KB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
+  - {name: 🇨🇦 加拿大-353.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-697.1KB/s(Youtube:不良林), server: 5.183.176.80, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-905.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-850.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-905.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-850.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-905.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-850.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-905.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-850.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-905.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-850.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-905.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-850.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-905.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-850.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
+      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
