--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇯🇵 日本-587.5KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇨🇦 加拿大-439.5KB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-884.0KB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
-  - {name: 🇨🇦 加拿大-353.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.23MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 134.195.196.128, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-677.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇯🇵 日本-697.1KB/s(Youtube:不良林), server: 5.183.176.80, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-853.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-993.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-507.0KB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-853.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-993.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-853.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-993.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-853.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-993.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-853.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-993.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-853.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-993.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-853.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-993.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 (已存活3天)香港-3.94MB/s(Youtube:不良林)
-      - 🇯🇵 日本-587.5KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-2.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-439.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-353.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-677.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇯🇵 日本-697.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-853.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-993.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-507.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
