--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-526.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 63467, type: trojan, password: 3fbb3fd9-e1a2-4c91-8380-dc2998d1fa8c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.55MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-179.5KB/s(Youtube:不良林), server: 5.183.176.80, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-372.2KB/s(Youtube:不良林), server: 134.195.196.128, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇨🇳 中国-765.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.55MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-179.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-372.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-765.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
